8236140: assert(!VerifyHashTableKeys || _hash_lock == 0) failed: remove node from hash table before modifying it

Add missing rehashing for modified node in InitializeNode::complete_stores().

Reviewed-by: neliasso, thartmann